syntax = "proto3";

package zksync.config.external_price_api_client;

message ExternalPriceApiClient {
  optional string source = 1;
  optional string base_url = 2;
  optional string api_key = 3;
  optional uint64 client_timeout_ms = 4;
  optional ForcedPriceClientConfig forced = 5;
}

message ForcedPriceClientConfig {
  optional uint64 numerator = 1;
  optional uint64 denominator = 2;
  optional uint32 fluctuation = 3;
}
